--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,9 +1,10 @@
 .header {
+    
     background-color:  #212529;
     color: #fff;
     font-size: 1.6rem;
     height: 100px;
-    border-bottom: 1px solid #fff;
+
     nav {
         height: 100%;
         margin: 0 10%;
@@ -14,8 +15,15 @@
             display: flex;
             gap: 40px;
             li {
-                list-style-type: none;     
+                list-style-type: none;
+                cursor: pointer;
+                font-weight: bold;
+                transition: 300ms;
+                &:hover {
+                    color: #0077b6;
+                }
             }
+            
         }
        .burger {
            font-size: 40px;
