--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,6 +1,7 @@
 .about {
-    padding: 70px 0;
+    padding: 70px 0 0 0;
     h1 {
+        margin-top: 50px;
         font-size: 2.7rem;
         letter-spacing: 3px;
         display: block;
@@ -27,20 +28,70 @@
         font-size: 16px;
         margin: 0 auto;
         text-align: center;
-        width: 450px;  
-        padding-bottom: 50px;
+        max-width: 450px;
+        padding-bottom: 20px;
+        margin-bottom: 100px;
     }
     .sectionContain {
+        margin: 50px 0;
         color: #fff;
-        .presentation {
-            
+        display: flex;
+        justify-content: space-around;
+        gap: 70px;
+        .presentation {         
             h2 {
+                text-align: center;
                 font-size: 2rem;
+                &::first-letter {
+                    color: #0077b6;
+                    font-size: 2.4rem;
+                }
             }
             p {
-                font-size: 16px;
+                font-size: 17px;
+                line-height: 27px;
+                max-width: 500px;
+                text-align: center;
+                span {
+                    font-weight: bold;
+                    color: #0077b6;
+                }
+            }
+            .button {
+                margin: 40px 0;
+                display: flex;
+                justify-content: center;
             }
         }
-        
+        .skills {
+            
+            h2 {
+                text-align: center;
+                font-size: 2rem;
+                padding-bottom: 30px;
+                &::first-letter {
+                    color: #0077b6;
+                    font-size: 2.4rem;
+                }
+            }
+            .skillsList {
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: center;
+                gap: 30px;
+                max-width: 300px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .about {
+        .sectionContain {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 25px;
+        }
     }
 }
