--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,18 +1,21 @@
 .home {
+    margin-top: 100px;
     padding-top: 4rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    gap: 10px;
+    height: 70vh;
+    position: relative;
     .containTitle {
         padding: 30px;
-
         .title {
             color: #fff;
-            letter-spacing: 2px;  
+            letter-spacing: 2px;
+            font-size: 2.7rem;
         }
         .name {
-            color: #0077b6;
-            
+            color: #0077b6;        
         }
         p {
             color: #e5e5e5;
@@ -21,21 +24,48 @@
         .useful {
             display: flex;
             align-items: center;
+            margin: 30px 0;
             .link {
-                font-size: 20px;
+                font-size: 30px;
                 margin-left: 15px;
+                transition: 300ms;
+                &:hover {
+                    color: #0077b6;
+                }
             }
         }
         .buttonEmpty {
             color: red;
         }
-        
-        
+             
     }
     .imageContain {
         .profil {
             height: 30px;
+        }      
+    }
+    .scroll {
+        position: absolute;
+        bottom: - 100px;
+        height: 70px;
+        width: 70px;
+        background-color: #fff;
+        transform: rotate(45deg);
+        
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .home {
+        .containTitle {
+            text-align: center;
+            padding: 0;
+            .useful {
+                justify-content: center;
+            }
         }
-       
+        .imageContain {
+            display: none;
+        }
     }
 }
