--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,10 +1,12 @@
 .header {
-    
+    position: fixed;
+    top: 0;
+    width: 100%;
     background-color:  #212529;
     color: #fff;
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     height: 100px;
-
+    z-index: 1;
     nav {
         height: 100%;
         margin: 0 10%;
