--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -1,7 +1,7 @@
 .projects {
     padding: 40px 0 100px 0;
     h1 {
-        margin-top: 50px;
+        margin-top: 20px;
         font-size: 2.7rem;
         letter-spacing: 3px;
         display: block;
@@ -10,7 +10,7 @@
         text-align: center;
         position: relative;
         display: block;
-        margin-bottom: 50px;
+        margin-bottom: 70px;
         &::before {
             content: '';
             position: absolute;
@@ -22,5 +22,16 @@
             border-radius: 10px;
             background-color: #0077b6;
         }
+    }
+    p {
+        color: #fff;
+        font-size: 17px;
+        text-align: center;
+        position: relative; 
+    }
+    .containProject{
+        display: flex;
+        flex-flow: row wrap;
+        gap: 40px;
     }
 }
