--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -28,6 +28,7 @@
         font-size: 17px;
         text-align: center;
         position: relative; 
+        padding-bottom: 70px;
     }
     .containProject{
         display: flex;
