--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -25,12 +25,13 @@
     }
     .info {
         color: #fff;
-        font-size: 16px;
+        font-size: 1.4rem;
         margin: 0 auto;
         text-align: center;
         max-width: 450px;
         padding-bottom: 20px;
         margin-bottom: 100px;
+        font-weight: 500;
     }
     .sectionContain {
         margin: 50px 0;
@@ -41,7 +42,7 @@
         .presentation {         
             h2 {
                 text-align: center;
-                font-size: 2rem;
+                font-size: 2.2rem;
                 &::first-letter {
                     color: #0077b6;
                     font-size: 2.4rem;
@@ -67,7 +68,7 @@
             
             h2 {
                 text-align: center;
-                font-size: 2rem;
+                font-size: 2.2rem;
                 padding-bottom: 30px;
                 &::first-letter {
                     color: #0077b6;
