--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -37,6 +37,7 @@
         top: 100px;
         width: 100%;
         border-top: 1px solid #fff;
+        height: 70vh;
         background-color: #212529;
         ul {
             width: auto;
