--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,7 +1,10 @@
-.projects {
-    padding: 40px 0 100px 0;
+.Contact {
+    color: #fff;
+    .form {
+
+    
     h1 {
-        margin-top: 20px;
+        margin-top: 50px;
         font-size: 2.7rem;
         letter-spacing: 3px;
         display: block;
@@ -10,7 +13,7 @@
         text-align: center;
         position: relative;
         display: block;
-        margin-bottom: 70px;
+        margin-bottom: 50px;
         &::first-letter {
             color: #0077b6;
             font-size: 4rem;
@@ -26,19 +29,32 @@
             border-radius: 10px;
             background-color: #0077b6;
         }
+
     }
-    p {
-        color: #fff;
-        font-size: 1.4rem;
-        text-align: center;
-        position: relative; 
-        padding-bottom: 70px;
-        font-weight: 500;
-    }
-    .containProject{
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        gap: 100px;
+    
+    .contactForm {
+       padding: 40px;
+       display: flex;
+       flex-direction: column;
+       max-width: 500px;
+       input, textarea {
+          margin: 8px 0;
+          padding: 10px;
+          font-size: 16px;
+          border-radius: 5px;
+       }
+       input {
+        //    max-width: 250px;
+       }
+       textarea {
+        height: 150px;
+        overflow: scroll;
+       }
+       .submit {
+           width: 150px;
+           align-self: center;
+       }
+       
     }
 }
+    }
