--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,7 +1,8 @@
 .about {
-    padding: 70px 0 0 0;
+    // padding: 70px 0 0 0;
+    // border: 1px solid red;
     h1 {
-        margin-top: 50px;
+        // margin-top: 50px;
         font-size: 2.7rem;
         letter-spacing: 3px;
         display: block;
