--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -2,7 +2,6 @@
     color: #fff;
     .form {
 
-    
     h1 {
         margin-top: 50px;
         font-size: 2.7rem;
@@ -36,23 +35,30 @@
        padding: 40px;
        display: flex;
        flex-direction: column;
-       max-width: 500px;
+       align-items: center;
        input, textarea {
           margin: 8px 0;
           padding: 10px;
           font-size: 16px;
           border-radius: 5px;
-       }
-       input {
-        //    max-width: 250px;
+          max-width: 400px;
+          width: 100%;
+          outline: none;
+          &:focus {
+              border: 3px solid #0077b6;
+          }
        }
        textarea {
-        height: 150px;
+        height: 200px;
         overflow: scroll;
        }
        .submit {
            width: 150px;
-           align-self: center;
+           background-color: #0077b6;
+           color: #fff;
+           font-size: 1.6rem;
+           border-color: #000;
+           cursor: pointer;
        }
        
     }
