--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,15 +1,14 @@
 .home {
+    // padding-top: 100px;
     margin-top: 100px;
-    padding-top: 4rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 10px;
+    gap: 100px;
     height: 70vh;
     position: relative;
     .containTitle {
-        padding: 30px;  
-        position: relative;
+        padding: 30px 100px 30px 30px;  
       
         .title {
             color: #fff;
@@ -42,6 +41,7 @@
              
     }
     .imageContain {
+   
         .profil {
             height: 30px;
         }      
@@ -59,6 +59,7 @@
 
 @media screen and (max-width: 850px) {
     .home {
+        justify-content: center;
         .containTitle {
             text-align: center;
             padding: 0;
