--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -1,7 +1,8 @@
 .header {
+    width: 100%;
+    max-width: 100vw;
     position: fixed;
     top: 0;
-    width: 100%;
     background-color:  #212529;
     color: #fff;
     font-size: 1.7rem;
