--- a/styles/ProjectSingle.module.scss
+++ b/styles/ProjectSingle.module.scss
@@ -1,15 +1,4 @@
-/* eslint-disable react/jsx-no-target-blank */
-/* eslint-disable @next/next/no-img-element */
-import React from 'react';
-import styled from 'styled-components';
-import Image from 'next/image';
-import Button from './Button';
-import styles from '../styles/ProjectSingle.module.scss'
-
-
-export const ProjectSingle = ({ project }) => {
-  const Contain = styled.div`
-    /* border: 3px solid #000; */
+.projectSingle {
     height: 450px;
     max-width: 400px;
     display: flex;
@@ -49,7 +38,7 @@ export const ProjectSingle = ({ project }) => {
          background-color: #000;
          display: flex;
          width: auto;
-         .contain-link {
+         .containLink {
            width: 50%;
            display: flex;
            justify-content: center;
@@ -68,28 +57,4 @@ export const ProjectSingle = ({ project }) => {
              }
          }
     }
-  `;
-  return (
-    <section className={styles.projectSingle}>
-      <Image
-        src={project.image}
-        max-height={320}
-        max-width={320}
-        alt={project.name}
-      />
-      <div className={styles.infoProject}>
-          <h4>{project.techno}</h4>
-          <p className={styles.desc}>{project.description}</p>
-      </div>
-      <div className={styles.containButton}>
-          <div className={styles.containLink}>
-          <a href={project.github} target='_blank'>Github</a>
-          </div>
-          <div className={styles.containLink}>
-          <a href={project.web} target='_blank'>Site Web</a>
-          </div>
-      </div>
-      
-    </section>
-  );
-};
+}
