--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,7 +1,6 @@
 .Contact {
     color: #fff;
     .form {
-
     h1 {
         margin-top: 50px;
         font-size: 2.7rem;
@@ -29,6 +28,25 @@
             background-color: #0077b6;
         }
 
+    }
+    p {
+        color: #fff;
+        font-size: 1.4rem;
+        margin: 0 auto;
+        text-align: center;
+        max-width: 450px;
+        padding-bottom: 20px;
+        font-weight: 500;
+        span {
+            a{
+                color: #0077b6;
+                font-size: 1.7rem;
+                transition: 300ms;
+                &:hover {
+                    color: #52b788;
+                }
+            }
+        }
     }
     
     .contactForm {
@@ -59,6 +77,12 @@
            font-size: 1.6rem;
            border-color: #000;
            cursor: pointer;
+           transition: 400ms;
+           &:hover {
+               transform: translateY(-5px);
+               background-color: #52b788;
+               color: #000;
+           }
        }
        
     }
