--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -1,6 +1,6 @@
 .projects {
 
-    padding: 40px 0 100px 0;
+    padding: 0px 0 100px 0;
     h1 {
         margin-top: 20px;
         font-size: 2.7rem;
@@ -35,6 +35,16 @@
         position: relative; 
         padding-bottom: 70px;
         font-weight: 500;
+        span {
+            a{
+                color: #0077b6;
+                font-size: 1.7rem;
+                transition: 300ms;
+                &:hover {
+                    color: #52b788;
+                }
+            }
+        }
     }
     .containProject{
         display: flex;
