--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,90 +1,89 @@
 .Contact {
-    color: #fff;
-    .form {
+  color: #fff;
+  .form {
     h1 {
-        margin-top: 50px;
-        font-size: 2.7rem;
-        letter-spacing: 3px;
-        display: block;
-        text-transform: uppercase;
-        color: #fff;
-        text-align: center;
-        position: relative;
-        display: block;
-        margin-bottom: 50px;
-        &::first-letter {
-            color: #0077b6;
-            font-size: 4rem;
-        }
-        &::before {
-            content: '';
-            position: absolute;
-            bottom: - 15px;
-            left: 50%;
-            transform: translateX(-50%);
-            height: 4px;
-            width: 50px;
-            border-radius: 10px;
-            background-color: #0077b6;
-        }
-
+      margin-top: 50px;
+      font-size: 2.7rem;
+      letter-spacing: 3px;
+      display: block;
+      text-transform: uppercase;
+      color: #fff;
+      text-align: center;
+      position: relative;
+      display: block;
+      margin-bottom: 50px;
+      &::first-letter {
+        color: #0077b6;
+        font-size: 4rem;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: -15px;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 4px;
+        width: 50px;
+        border-radius: 10px;
+        background-color: #0077b6;
+      }
     }
     p {
-        color: #fff;
-        font-size: 1.4rem;
-        margin: 0 auto;
-        text-align: center;
-        max-width: 450px;
-        padding-bottom: 20px;
-        font-weight: 500;
-        span {
-            a{
-                color: #0077b6;
-                font-size: 1.7rem;
-                transition: 300ms;
-                &:hover {
-                    color: #52b788;
-                }
-            }
-        }
-    }
-    
-    .contactForm {
-       padding: 40px;
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       input, textarea {
-          margin: 8px 0;
-          padding: 10px;
-          font-size: 16px;
-          border-radius: 5px;
-          max-width: 400px;
-          width: 100%;
-          outline: none;
-          &:focus {
-              border: 3px solid #0077b6;
+      color: #fff;
+      font-size: 1.4rem;
+      margin: 0 auto;
+      text-align: center;
+      max-width: 450px;
+      padding-bottom: 20px;
+      font-weight: 500;
+      span {
+        a {
+          color: #0077b6;
+          font-size: 1.7rem;
+          transition: 300ms;
+          &:hover {
+            color: #52b788;
           }
-       }
-       textarea {
+        }
+      }
+    }
+
+    .contactForm {
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      input,
+      textarea {
+        margin: 8px 0;
+        padding: 10px;
+        font-size: 16px;
+        border-radius: 5px;
+        max-width: 400px;
+        width: 100%;
+        outline: none;
+        &:focus {
+          border: 3px solid #0077b6;
+        }
+      }
+      textarea {
         height: 200px;
         overflow: scroll;
-       }
-       .submit {
-           width: 150px;
-           background-color: #0077b6;
-           color: #fff;
-           font-size: 1.6rem;
-           border-color: #000;
-           cursor: pointer;
-           transition: 400ms;
-           &:hover {
-               transform: translateY(-5px);
-               background-color: #52b788;
-               color: #000;
-           }
-       }
-       
+      }
+      .submit {
+        width: 150px;
+        background-color: #0077b6;
+        color: #fff;
+        font-size: 1.6rem;
+        border-color: #000;
+        cursor: pointer;
+        transition: 400ms;
+        &:hover {
+          transform: translateY(-5px);
+          background-color: #52b788;
+          color: #000;
+        }
+      }
     }
+  }
 }
-    }
